--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="./dist/index.js"></script>
+    <script src="./index.js"></script>
     <title>Document</title>
 </head>
 <body>
 <script>
-    console.log(window.dataSeeder.)
 </script>
 </body>
 </html>
