--- a/examples/index.html
+++ b/examples/index.html
@@ -6,9 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./index.js"></script>
-    <title>Document</title>
+    <title>Examples</title>
 </head>
 <body>
+Hello world!
 <script>
 </script>
 </body>
